Improve project to portfolio redirect
Using window.loction.replace keeps projects out of history.

--- a/projects.html
+++ b/projects.html
@@ -4,14 +4,15 @@ permalink: /projects/
 sitemap: false
 ---
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="refresh" content="0; url=/portfolio/">
     <link rel="canonical" href="/portfolio/">
+    <title>Redirecting to Portfolio...</title>
     <script>
-        window.location.href = "/portfolio/";
+        window.location.replace("/portfolio/");
     </script>
 </head>
 
